--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,11 @@
   animation: animatedgradient 6s ease infinite alternate;
 }
 
+.border-gradient {
+  border-image: linear-gradient(to bottom right, #6B46C1, #b97af3, #6B46C1);
+  border-image-slice: 1;
+}
+
 @keyframes animatedgradient {
   0% {
     background-position: 0% 50%;
@@ -48,5 +53,84 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer utilities {
+  .bg-radial-gradient {
+    background-size: 100px 100px;
+    background-image: radial-gradient(circle, #a855f7 2px, rgba(0, 0, 0, 0) 1px);
+  }
+  
+  .bg-grid-gradient {
+    background-size: 100px 100px;
+    background-image:
+      linear-gradient(to right, #a855f7 1px, transparent 1px),
+      linear-gradient(to bottom, #a855f7 1px, transparent 1px);
+  }
+
+  .bg-star-gradient {
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+    background-image:
+      radial-gradient(#a855f7, rgba(168, 85, 247,.2) 2px, transparent 40px),
+      radial-gradient(#a855f7, rgba(168, 85, 247,.15) 1px, transparent 30px),
+      radial-gradient(#a855f7, rgba(168, 85, 247,.1) 2px, transparent 40px),
+      radial-gradient(rgba(168, 85, 247,.4), rgba(168, 85, 247,.1) 2px, transparent 30px);
+  }
+
+  .bg-cross-gradient {
+    background:
+    radial-gradient(#a855f7 3px, transparent 4px),
+    radial-gradient(#a855f7 3px, transparent 4px),
+    linear-gradient(#121214 4px, transparent 0),
+    linear-gradient(45deg, transparent 74px, transparent 75px, #121214 75px, #ffffff 76px, transparent 77px, transparent 109px),
+    linear-gradient(-45deg, transparent 75px, transparent 76px, #121214 76px, #ffffff 77px, transparent 78px, transparent 109px),
+    #121214;
+    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
+    background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+  }
+}
+
+@layer utilities {
+  .bg-shadow-gradient {
+    background-image: radial-gradient(circle at center, #121214 30%, transparent 70%);
+  }
+
+  .bg-shadow-gradient1 {
+    background-image:
+    linear-gradient(180deg,#121214 3%,rgba(18,18,20,.8) 27%,transparent),
+    linear-gradient(0deg,#121214 3%,rgba(18,18,20,.8) 27%,transparent);
+  }
+
+  .bg-shadow-gradient2 {
+    background: linear-gradient(110deg,#1a1a1a .06%,#121214);
+  }
+
+  .bg-shadow-gradient3 {
+    background: linear-gradient(110deg,#333 .06%,#222);
+  }
+  
+  .border-shadow {
+    box-shadow: inset 0 0 6px hsla(0,0%,100%,.1);
+  }
+}
+
+@layer components {
+  /* For WebKit browsers (Chrome, Safari) */
+  ::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #a855f7;
+    border-radius: 3px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: transparent /* Color of the scrollbar track */
+  }
+  /* On hover, change the color of the scrollbar thumb */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #8B5CF6;
   }
 }
